# AudioCapture

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  build-ci.bat  build.bat  clean.bat  resource.rc  vcpkg.json
.github/workflows/: ci.yml  release.yml
include/: AudioCapture.h  AudioDeviceEnumerator.h  AudioMixer.h  CaptureManager.h  DebugLogger.h  DeviceOutputDestination.h  FileOutputDestination.h  FlacEncoder.h  FlacFileDestination.h  InputDeviceSource.h  InputSource.h  InputSourceManager.h  Mp3FileDestination.h  OpusEncoder.h  OpusFileDestination.h  OutputDestination.h  OutputDestinationManager.h  ProcessEnumerator.h  ProcessInputSource.h  SystemAudioInputSource.h  WavFileDestination.h  WavWriter.h  resource.h
package/: README.md
src/: AudioCapture.cpp  AudioDeviceEnumerator.cpp  AudioMixer.cpp  CaptureManager.cpp  DebugLogger.cpp  DeviceOutputDestination.cpp  DiagnosticCapture.cpp  FileOutputDestination.cpp  FlacEncoder.cpp  FlacFileDestination.cpp  InputDeviceSource.cpp  InputSourceManager.cpp  Mp3Encoder.cpp  Mp3FileDestination.cpp  OpusEncoder.cpp  OpusFileDestination.cpp  OutputDestination.cpp  OutputDestinationManager.cpp  ProcessEnumerator.cpp  ProcessInputSource.cpp  SystemAudioInputSource.cpp  TestProcessCapture.cpp  WavFileDestination.cpp  WavWriter.cpp  main.cpp
triplets/: x64-windows-static-mt.cmake
